@@ -8,6 +8,9 @@ import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.Date;
 
+import javax.json.bind.Jsonb;
+import javax.json.bind.JsonbBuilder;
+
 import io.quarkus.runtime.StartupEvent;
 import org.apache.commons.lang3.StringUtils;
 import org.eclipse.microprofile.config.ConfigProvider;
@@ -25,6 +28,8 @@ public class TaskBean {
 
 	private static final Logger log = Logger.getLogger(TaskBean.class);
 
+	private static Jsonb jsonb = JsonbBuilder.create();
+
 	@Inject
 	org.quartz.Scheduler quartz;
 
@@ -41,65 +46,80 @@ public class TaskBean {
 		}
 	}
 
+	@Transactional
 	public void addSchedule(QScheduleMessage scheduleMessage, GennyToken userToken) throws SchedulerException {
 
-		scheduleMessage.id = null;
-		scheduleMessage.realm = userToken.getRealm();
-		scheduleMessage.sourceCode = userToken.getUserCode();
-		scheduleMessage.token = userToken.getToken();
+		log.info(jsonb.toJson(scheduleMessage));
 
-		log.info("Persisting new Schedule -> " + scheduleMessage.code + ":" 
-				+ (scheduleMessage.trigger != null ? scheduleMessage.trigger : scheduleMessage.cron) 
-				+ " from " + scheduleMessage.sourceCode);
+		// setup message for persistance
+		scheduleMessage.id = null;
+		scheduleMessage.setRealm(userToken.getRealm());
+		scheduleMessage.setSourceCode(userToken.getUserCode());
+		scheduleMessage.setToken(userToken.getToken());
+
+		// grab fields of message
+		String realm = scheduleMessage.getRealm();
+		String code = scheduleMessage.getCode();
+		String sourceCode = scheduleMessage.getSourceCode();
+		String channel = scheduleMessage.getChannel();
+
+		String cron = scheduleMessage.getCron();
+		LocalDateTime triggerTime = scheduleMessage.getTriggerTime();
+		String messageJson = scheduleMessage.getJsonMessage();
+
+		log.info("Persisting new Schedule -> " + code + ":"
+				+ (triggerTime != null ? triggerTime : cron) + " from " + sourceCode);
 
 		scheduleMessage.persist();
 
-		String messageJson = scheduleMessage.jsonMessage;
-
+		// create job from job map
 		JobDataMap jobDataMap = new JobDataMap();
-		jobDataMap.put("message", messageJson);
 		jobDataMap.put("sourceCode", userToken.getUserCode());
 		jobDataMap.put("token", userToken.getToken());
-		jobDataMap.put("channel", scheduleMessage.channel);
-		jobDataMap.put("code", scheduleMessage.code);
+		jobDataMap.put("channel", channel);
+		jobDataMap.put("code", code);
+		jobDataMap.put("message", messageJson);
 
 		JobDetail job = JobBuilder.newJob(ShleemyJob.class)
-			.withIdentity(scheduleMessage.code, userToken.getRealm())
+			.withIdentity(code, realm)
 			.setJobData(jobDataMap)
 			.build();
 
-		Trigger trigger = null;
+		Trigger jobTrigger = null;
 		String scheduledFor = null;
 
 		// handle cron trigger
-		if (!scheduleMessage.cron.isBlank()) {
+		if (!StringUtils.isBlank(cron)) {
 
-			CronScheduleBuilder cronSchedule = CronScheduleBuilder.cronSchedule(scheduleMessage.cron);
-			trigger = TriggerBuilder.newTrigger()
-				.withIdentity(scheduleMessage.code, userToken.getRealm())
+			CronScheduleBuilder cronSchedule = CronScheduleBuilder.cronSchedule(cron);
+			jobTrigger = TriggerBuilder.newTrigger()
+				.withIdentity(code, realm)
 				.startNow()
 				.withSchedule(cronSchedule)
 				.build();
 
-			scheduledFor = scheduleMessage.cron;
+			scheduledFor = cron;
 
-			// handle time trigger
-		} else if (scheduleMessage.trigger != null) {
+		// handle time trigger
+		} else if (triggerTime != null) {
 
-			Date scheduledDateTime = Date.from(scheduleMessage.trigger.atZone(ZoneId.systemDefault()).toInstant());
-			trigger = TriggerBuilder.newTrigger()
-				.withIdentity(scheduleMessage.code, userToken.getRealm())
+			Date scheduledDateTime = Date.from(triggerTime.atZone(ZoneId.systemDefault()).toInstant());
+			jobTrigger = TriggerBuilder.newTrigger()
+				.withIdentity(code, realm)
 				.startAt(scheduledDateTime)
-				.forJob(scheduleMessage.code, userToken.getRealm())
+				.forJob(code, realm)
 				.build();
 
 			scheduledFor = scheduledDateTime.toString();
+		} else {
+			log.error("No valid triggerTime or cron was provided!");
 		}
 
-		log.info("Scheduled " + userToken.getUserCode() + ":" + scheduleMessage.code + ":" + userToken.getEmail() + " for " + userToken.getRealm()
+		log.info("Scheduling " + userToken.getUserCode() + ":" + code + ":" + userToken.getEmail() + " for Realm: " + realm
 				+ ", Trigger: " + scheduledFor + ", Current time: " + LocalDateTime.now());
 
-		quartz.scheduleJob(job, trigger);
+		// schedule the job
+		quartz.scheduleJob(job, jobTrigger);
 	}
 
 	public void abortSchedule(String code, GennyToken userToken) throws SchedulerException {
@@ -108,23 +128,24 @@ public class TaskBean {
 		quartz.deleteJob(jobKey);
 	}
 
-	@Transactional
 	void performTask(JobExecutionContext context) {
 
 		log.info("Executing Task: " + context.getFireTime());
 
+		// grab fields of scheduled message
 		String sourceCode = context.getJobDetail().getJobDataMap().getString("sourceCode");
 		String channel = context.getJobDetail().getJobDataMap().getString("channel");
 		String code = context.getJobDetail().getJobDataMap().getString("code");
 		String token = context.getJobDetail().getJobDataMap().getString("token");
 		GennyToken userToken = new GennyToken(token);
 
-		String scheduleMsgJson = (String) context.getJobDetail().getJobDataMap().get("message");
+		String jsonMessage = (String) context.getJobDetail().getJobDataMap().get("message");
 
-		log.info("Sending event " + sourceCode + ":" + code + ":" + userToken.getEmail() + " for " 
-				+ userToken.getRealm() + " at " + LocalDateTime.now() + ", scheduleMsgJson:" + scheduleMsgJson);
+		log.info("Sending " + sourceCode + ":" + code + ":" + userToken.getEmail() + " to " + channel + " for " 
+				+ userToken.getRealm() + " at " + LocalDateTime.now() + ", jsonMessage:" + jsonMessage);
 
-		KafkaUtils.writeMsg("events", scheduleMsgJson);
+		// send to channel specified by schedule message
+		KafkaUtils.writeMsg(channel, jsonMessage);
 	}
 
 }
